"Updated Timeline component to display a message when no events are available, added default map image and attribution, and fixed event update API endpoint URL."

--- a/src/pages/editMap/editMap.css
+++ b/src/pages/editMap/editMap.css
@@ -11,6 +11,14 @@
 				width: 100%;
 				max-height: 95vh;
 				object-fit: contain;
+
+				+.defaultAttribution {
+					display: none;
+				}
+
+				&[src*="defaultMap"]+.defaultAttribution {
+					display:inline;
+				}
 			}
 
 
