--- a/src/pages/all.css
+++ b/src/pages/all.css
@@ -2,6 +2,7 @@
     .mapList {
         display: flex;
         flex-direction: column;
+        gap:20px;
 
         .mapItem {
             display: grid;
