--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -55,35 +55,60 @@
         }
     }
 
+    .timelineDrop {
+        position: absolute;
+        inset: 0;
+    }
+
     .events {
         position: absolute;
         top: 50%;
         left: 50%;
         translate: -50% -50%;
         width: 1000px;
+        height: 10px;
 
-        .event {
+        .eventPin {
             position: absolute;
             top: 50%;
             translate: -50% -50%;
             height: 10px;
             width: 10px;
-            background: red;
+            background: black;
+            color: rgb(220, 82, 12);
+            cursor: pointer;
 
-
-
-            .date {
+            i {
+                filter: drop-shadow(0 0 0.5px black) drop-shadow(0 0 0.5px black) drop-shadow(0 0 0.5px black);
                 position: absolute;
-                bottom: -50px;
+                top: 50%;
                 left: 50%;
-                translate: -50%;
-                opacity: 0;
-                transition: opacity 0.3s;
+                translate: -50% -50%;
+                transition: scale 0.3s;
             }
 
-            &:hover .date {
-                opacity: 1;
+            &.active i {
+                scale: 2;
             }
+        }
+    }
+
+    .closeButton {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: none;
+        border-radius: unset;
+        font-family: Merienda, sans-serif;
+        color: black;
+        font-size: 30px;
+        padding: 10px;
+        transition: scale 0.3s ease-in-out;
+
+        &:hover, &:focus-within {
+            background: none;
+            scale: 1.2;
+
         }
     }
 }
