--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -26,8 +26,7 @@
         background: grey;
         border-radius: 2px;
 
-
-        .divisions {
+        .years {
             position: absolute;
             left: 0;
             top: 0;
