--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,6 +1,6 @@
 /* Sidebar styling */
 .sidebar {
-	--side-width: 300px;
+	--side-width: 350px;
 	--time: 0.3s;
 
 	width: var(--side-width);
@@ -16,16 +16,12 @@
 	z-index: 2;
 	overflow: hidden;
 
-
 	&:has(+ .timeline.open) {
 		height: calc(100% - 200px);
-	}
 
-	.sidebarActions {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin-top: 50px;
+		.fieldGroup textarea {
+			max-height: 200px;
+		}
 	}
 
 	.sidebarContent {
@@ -33,12 +29,41 @@
 		border: 30px solid;
 		border-image: url('../../assets/codeBorder.png') 40;
 
-		.deleteMap {
-			font-size: 16px;
+		.sidebarActions {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			margin-top: 50px;
+		}
+
+		.closeButton {
 			position: absolute;
-			bottom: 30px;
-			left: 50%;
-			translate: -50%;
+			top: 10px;
+			right: 10px;
+			background: none;
+			border-radius: unset;
+			font-family: Merienda, sans-serif;
+			color: black;
+			font-size: 30px;
+			padding: 10px;
+			transition: scale 0.3s ease-in-out;
+
+			&:hover, &:focus-within {
+				background: none;
+				scale: 1.2;
+
+			}
+		}
+
+		.event {
+
+			&.view {
+
+				.date {
+					color: #555;
+				}
+			}
+
 		}
 	}
 
@@ -47,41 +72,22 @@
 		box-shadow: 0 0 5px;
 	}
 
-	.closeButton {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		background: none;
-		border-radius: unset;
-		font-family: Merienda, sans-serif;
-		color: black;
-		font-size: 30px;
-		padding: 10px;
-		transition: scale 0.3s ease-in-out;
+	.fieldGroup {
+		display: flex;
+		flex-direction: column;
+		align-items: start;
 
-		&:hover, &:focus-within {
-			background: none;
-			scale: 1.2;
+		input, textarea {
+			width: 100%;
+		}
 
+		textarea {
+			resize: vertical;
+			min-height: 70px;
+			max-width: 100%;
+			max-height: 400px;
+			transition: max-height var(--time);
 		}
 	}
 
-	.event {
-
-		&.view {
-
-			.date {
-				color: #555;
-			}
-		}
-
-		&.edit {
-			.fieldGroup {
-				display: flex;
-				flex-direction: column;
-			}
-		}
-
-
-	}
 }
