--- a/src/App.css
+++ b/src/App.css
@@ -21,21 +21,23 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: darkred;
   text-decoration: inherit;
 }
 
-a:hover {
-  color: #747bff;
+a:hover, a:focus {
+  color: rgb(192, 10, 10);
+  text-decoration: underline;
 }
 
-body {
+:where(body) {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background: var(--color-primary);
+
 
   #root {
     width: 100%;
@@ -45,6 +47,13 @@ body {
     .page {
       width: 100%;
       height: 100%;
+
+      .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
 
       main {
         width: 100%;
