--- a/src/pages/editMap/editMap.css
+++ b/src/pages/editMap/editMap.css
@@ -21,15 +21,20 @@
 					object-fit: contain;
 					-webkit-user-drag: none;
 				}
+
 				+.defaultAttribution {
 					position: fixed;
 					bottom: 50px;
 					left: 50%;
 					translate: -50%;
 					display: none;
+					filter: drop-shadow(0 0 2px rgb(255, 254, 254));
+					-webkit-text-stroke: 1px black;
+					paint-order: stroke;
+					letter-spacing: 0.1em;
 				}
 
-				&:has([src*="defaultMap"]) + .defaultAttribution {
+				&:has([src*="defaultMap"])+.defaultAttribution {
 					display: inline;
 				}
 
@@ -40,9 +45,35 @@
 					cursor: pointer;
 					z-index: 5;
 
+					&::after {
+						position: absolute;
+						left: 50%;
+						top: 0;
+						font-size: 20px;
+						translate: -50% -100%;
+						width: fit-content;
+						min-width: 20ch;
+						display: block;
+						content: attr(data-title);
+						user-select: none;
+						pointer-events: none;
+						opacity: 0;
+						transition: opacity var(--transition-dets), top var(--transition-dets);
+						filter: drop-shadow(0 0 2px rgb(255, 254, 254));
+						-webkit-text-stroke: 1px black;
+						paint-order: stroke;
+					}
+
+					&:hover::after,&.active::after {
+						opacity: 1;
+					}
+					&.active::after {
+						top:-10px;
+					}
+
 					i {
 						filter: drop-shadow(0 0 2px #000);
-						transition: all 0.3s ease-in-out;
+						transition: all var(--transition-dets);
 
 					}
 
