"Updated EventPin component to accept inLocation prop, added location events filtering in ViewLocation, and refactored EditContext and EditMap components with various changes to event and location handling."

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -55,7 +55,7 @@
             }
         }
 
-        .event {
+        >.event {
 
             &.view {
 
@@ -64,6 +64,21 @@
                 }
             }
 
+        }
+
+        >.location {
+            .events {
+                font-size:25px;
+                display:grid;
+                grid-template-columns: 1fr 1fr 1fr;
+
+                .eventPin {
+                    font-size:35px;
+                    width:auto;
+                    height:auto;
+                    translate:none !important;
+                }
+            }
         }
     }
 
