--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -36,6 +36,24 @@
             margin-top: 50px;
         }
 
+        .backToLocation {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: none;
+            border-radius: unset;
+            font-family: Merienda, sans-serif;
+            color: black;
+            font-size: 30px;
+            padding: 10px;
+            transition: scale 0.3s ease-in-out;
+
+            &:hover, &:focus-within {
+                background: none;
+                scale: 1.2;
+            }
+        }
+
         .closeButton {
             position: absolute;
             top: 10px;
@@ -51,7 +69,6 @@
             &:hover, &:focus-within {
                 background: none;
                 scale: 1.2;
-
             }
         }
 
