"Updated toolbar.css to add list-style: none; and added a new list item to Changelog.jsx"

--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -15,6 +15,7 @@
         background: #e3c79d;
         padding: 5px 15px;
         box-shadow: 0 0 5px black;
+        list-style: none;
 
         &:first-of-type {
             padding:5px;
