--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -53,7 +53,7 @@
                     font-size: 1.4rem;
                 }
 
-                &.eventDrag {
+                &.pointDrag {
                     cursor: grab;
 
                     &:hover i {
