"Added styles for .locationPin class, including dragging state and pseudo-element"

--- a/src/pages/editMap/editMap.css
+++ b/src/pages/editMap/editMap.css
@@ -84,10 +84,33 @@
 
 					&.dragging {
 						pointer-events: none;
+
 					}
 
 					&.locationPin {
 						color: #b522b5;
+
+						&.dragging&::before {
+							width: 80px;
+							height: 80px;
+						}
+
+						&::before {
+							position: absolute;
+							left: 50%;
+							top: 50%;
+							translate: -50% -50%;
+							width: 0px;
+							height: 0px;
+							display: block;
+							content: '';
+							user-select: none;
+							pointer-events: none;
+							background: #00000033;
+							border-radius: 100px;
+							transition: width var(--transition-dets), height var(--transition-dets);
+
+						}
 					}
 
 					&.eventPin {
