--- a/src/pages/editMap/editMap.css
+++ b/src/pages/editMap/editMap.css
@@ -90,11 +90,6 @@
 					&.locationPin {
 						color: #b522b5;
 
-						&.dragging&::before {
-							width: 80px;
-							height: 80px;
-						}
-
 						&::before {
 							position: absolute;
 							left: 50%;
@@ -109,7 +104,6 @@
 							background: #00000033;
 							border-radius: 100px;
 							transition: width var(--transition-dets), height var(--transition-dets);
-
 						}
 					}
 
@@ -117,8 +111,11 @@
 						color: #da3d3d;
 					}
 				}
-
-
+				/*set the droppable area just when dragging an event*/
+				&:has(.eventPin:not(.dragging)) .locationPin.dragging::before {
+					width: 80px;
+					height: 80px;
+				}
 			}
 		}
 
