--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -18,12 +18,13 @@
         list-style: none;
 
         &:first-of-type {
-            padding:5px;
-            border-top-left-radius:10px;
+            padding: 5px;
+            border-top-left-radius: 10px;
             border-bottom-left-radius: 10px;
         }
+
         &:last-of-type {
-            border-top-right-radius:10px;
+            border-top-right-radius: 10px;
             border-bottom-right-radius: 10px;
         }
 
@@ -66,9 +67,23 @@
 }
 
 @keyframes wiggle {
-    0% {transform: rotate(10deg);}
-    25% {transform: rotate(-10deg);}
-    50% {transform: rotate(20deg);}
-    75% {transform: rotate(-5deg);}
-    100% {transform: rotate(0deg);}
-  }
+    0% {
+        transform: rotate(10deg);
+    }
+
+    25% {
+        transform: rotate(-10deg);
+    }
+
+    50% {
+        transform: rotate(20deg);
+    }
+
+    75% {
+        transform: rotate(-5deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
