--- a/src/pages/editMap/editMap.css
+++ b/src/pages/editMap/editMap.css
@@ -18,7 +18,11 @@
 				.map {
 					width: 70vw;
 					object-fit: contain;
+					user-select: none;
+					-moz-user-select: none;
 					-webkit-user-drag: none;
+					-webkit-user-select: none;
+					-ms-user-select: none;
 				}
 
 				+.defaultAttribution {
