--- a/src/App.css
+++ b/src/App.css
@@ -1,210 +1,214 @@
 :root {
-  --color-primary: #ffe8c5;
-  --color-secondary: #5f361f;
-  --transition-dets: 0.3s ease-in-out;
+	--color-primary: #ffe8c5;
+	--color-secondary: #5f361f;
+	--transition-dets: 0.3s ease-in-out;
 
-  text-align: center;
-  font-family: "Merienda", cursive;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  line-height: 1.5;
-  font-weight: 400;
-  color: #000;
+	text-align: center;
+	font-family: 'Merienda', cursive;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 1.5;
+	font-weight: 400;
+	color: #000;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 
-  overflow: hidden;
+	overflow: hidden;
 }
 
 a {
-  font-weight: 500;
-  color: darkred;
-  text-decoration: inherit;
+	font-weight: 500;
+	color: darkred;
+	text-decoration: inherit;
 }
 
-a:hover, a:focus {
-  color: rgb(192, 10, 10);
-  text-decoration: underline;
+a:hover,
+a:focus {
+	color: rgb(192, 10, 10);
+	text-decoration: underline;
 }
 
 :where(body) {
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  background: var(--color-primary);
+	height: 100vh;
+	width: 100vw;
+	margin: 0;
+	display: flex;
+	place-items: center;
+	min-width: 320px;
+	min-height: 100vh;
+	background: var(--color-primary);
 
+	:where(#root) {
+		width: 100%;
+		height: 100%;
+		margin: 0 auto;
 
-  :where(#root) {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+		:where(.page) {
+			width: 100%;
+			height: 100%;
 
-    :where(.page) {
-      width: 100%;
-      height: 100%;
+			.content {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+			}
 
-      .content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
+			main {
+				width: 100%;
+				height: 100%;
+			}
+		}
 
-      main {
-        width: 100%;
-        height: 100%;
-      }
-    }
+		.error-warning {
+			background: #da3d3d;
+			color: white;
+			z-index: 100;
+			position: absolute;
+			top: 50px;
+			right: 100px;
 
-    .error-warning {
-      background: #da3d3d;
-      color: white;
-      z-index: 100;
-      position: absolute;
-      top: 50px;
-      right: 100px;
-      padding: 5px 10px;
+			&.active {
+				padding: 5px 10px;
+			}
 
-      .close {
-        position: absolute;
-        top: 0px;
-        right: 10px;
-        background: none;
-        border-radius: unset;
-        font-family: Merienda, sans-serif;
-        font-size: 20px;
-        padding: 0;
-        transition: scale 0.3s ease-in-out;
+			.close {
+				position: absolute;
+				top: 0px;
+				right: 10px;
+				background: none;
+				border-radius: unset;
+				font-family: Merienda, sans-serif;
+				font-size: 20px;
+				padding: 0;
+				transition: scale 0.3s ease-in-out;
 
-        &:hover, &:focus-within {
-          background: none;
-          scale: 1.2;
-
-        }
-      }
-    }
-  }
-
+				&:hover,
+				&:focus-within {
+					background: none;
+					scale: 1.2;
+				}
+			}
+		}
+	}
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  margin-bottom: 50px;
+	font-size: 3.2em;
+	line-height: 1.1;
+	margin-bottom: 50px;
 }
 
-button, input:is([type="submit"], [type="button"]) {
-  -webkit-transition: background-color .25s ease;
-  -moz-transition: background-color .25s ease;
-  -o-transition: background-color .25s ease;
-  transition: background-color .25s ease;
-  display: inline-block;
-  padding: .6em 1.2em;
-  cursor: pointer;
-  background-color: var(--color-secondary);
-  font-family: "Merriweather Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: white;
-  text-decoration: none;
-  border: none;
-  border-radius: 10px;
-  outline: none;
+button,
+input:is([type='submit'], [type='button']) {
+	-webkit-transition: background-color 0.25s ease;
+	-moz-transition: background-color 0.25s ease;
+	-o-transition: background-color 0.25s ease;
+	transition: background-color 0.25s ease;
+	display: inline-block;
+	padding: 0.6em 1.2em;
+	cursor: pointer;
+	background-color: var(--color-secondary);
+	font-family: 'Merriweather Sans', sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	color: white;
+	text-decoration: none;
+	border: none;
+	border-radius: 10px;
+	outline: none;
 
-  &:hover, &:focus-within {
-    outline: none;
-    border: none;
-    background-color: rgb(138, 83, 60);
-  }
+	&:hover,
+	&:focus-within {
+		outline: none;
+		border: none;
+		background-color: rgb(138, 83, 60);
+	}
 
-  &.red {
-    background: #5e1414;
+	&.red {
+		background: #5e1414;
 
-    &:hover {
-      background: #b90707;
-    }
-  }
+		&:hover {
+			background: #b90707;
+		}
+	}
 
-  &.green {
-    background: #164d24;
+	&.green {
+		background: #164d24;
 
-    &:hover {
-      background: #0d6d25;
-    }
-  }
+		&:hover {
+			background: #0d6d25;
+		}
+	}
 
-  &.textButton {
-    background: none;
-    color: inherit;
-    opacity: .6;
-    text-decoration: underline;
-    font-style: italic;
-  }
+	&.textButton {
+		background: none;
+		color: inherit;
+		opacity: 0.6;
+		text-decoration: underline;
+		font-style: italic;
+	}
 }
 
 :where(.form) {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
 
-  :where(.fieldGroup) {
-    display: grid;
-    grid-template-columns: 3fr 3fr 1fr;
-    align-items: center;
-    justify-items: start;
+	:where(.fieldGroup) {
+		display: grid;
+		grid-template-columns: 3fr 3fr 1fr;
+		align-items: center;
+		justify-items: start;
 
-    :where(input:is([type="text"], [type="number"]), textarea) {
-      box-shadow: 0 0 3px;
-      border-radius: 5px;
-      background: #fff0cc;
-      padding: 5px;
-      font-family: monospace;
-      width: 100%;
+		:where(input:is([type='text'], [type='number']), textarea) {
+			box-shadow: 0 0 3px;
+			border-radius: 5px;
+			background: #fff0cc;
+			padding: 5px;
+			font-family: monospace;
+			width: 100%;
 
-      &:disabled {
-        opacity: 0.5;
-        user-select: none;
-        pointer-events: none;
-      }
-    }
+			&:disabled {
+				opacity: 0.5;
+				user-select: none;
+				pointer-events: none;
+			}
+		}
 
-    textarea {
-      min-height: 50px;
-      max-height: 30ch;
-      resize: vertical;
-    }
-  }
+		textarea {
+			min-height: 50px;
+			max-height: 30ch;
+			resize: vertical;
+		}
+	}
 }
 
 dl {
-  display: flex;
-  flex-wrap: wrap;
-  text-align: left;
-  gap: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	text-align: left;
+	gap: 10px;
 
-  dt {
-    font-weight: 800;
-  }
+	dt {
+		font-weight: 800;
+	}
 
-  dd {
-    font-family: "Merriweather Sans", sans-serif;
-    text-wrap: pretty;
-  }
+	dd {
+		font-family: 'Merriweather Sans', sans-serif;
+		text-wrap: pretty;
+	}
 }
 
 hr {
-  width: 100%;
-  height: 1px;
-  background: currentColor;
-  margin-block: 1.5em;
+	width: 100%;
+	height: 1px;
+	background: currentColor;
+	margin-block: 1.5em;
 }
 
 /*
@@ -213,6 +217,6 @@ hr {
 }*/
 
 *::selection {
-  background: var(--color-secondary);
-  color: var(--color-primary);
+	background: var(--color-secondary);
+	color: var(--color-primary);
 }
